--- a/pom.xml
+++ b/pom.xml
@@ -3,17 +3,20 @@
   <groupId>com.has</groupId>
   <artifactId>threeinarow</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.6.2</version>
+   </parent>
   
   <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.0.3.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.0.3.RELEASE</version>
             <scope>test</scope>
         </dependency>
    </dependencies>
